--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ p{
 /*Header*/
 #container-header{
     height: 40em;
-    background-image: linear-gradient(rgb(0, 0, 0, 0.2), rgba(0,0,0, 0.7)), url("/img/background.jpg");
+    background-image: linear-gradient(rgb(0, 0, 0, 0.2), rgba(0,0,0, 0.7)), url("../img/background.jpg");
     background-position: bottom;
     background-repeat: no-repeat;
     background-attachment: fixed;
