--- a/links sites/Construção/css/style.css
+++ b/links sites/Construção/css/style.css
@@ -236,7 +236,7 @@ header ion-icon{
     height: max-content;
     text-align: center;
     padding: 50px;
-    background-image: linear-gradient(rgb(0, 0, 0, 0.2), rgba(0,0,0, 0.7)), url("/img/sobre.jpg");
+    background-image: linear-gradient(rgb(0, 0, 0, 0.2), rgba(0,0,0, 0.7)), url("../img/sobre.jpg");
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
